--- a/RBody.vcxproj
+++ b/RBody.vcxproj
@@ -91,7 +91,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\External\;$(SolutionDir)\External\glad\include;$(SolutionDir)\External\GLM;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\External\;$(SolutionDir)\External\glad\include;$(SolutionDir)\External\tiny_obj_loader;$(SolutionDir)\External\GLM;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -116,7 +116,7 @@ copy $(SolutionDir)Viewer\shader.frag $(SolutionDir)$(Configuration)\</Command>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\External\;$(SolutionDir)\External\glad\include;$(SolutionDir)\External\GLM;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\External\;$(SolutionDir)\External\glad\include;$(SolutionDir)\External\tiny_obj_loader;$(SolutionDir)\External\GLM;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -174,6 +174,7 @@ copy $(SolutionDir)Viewer\shader.frag $(SolutionDir)$(Configuration)\</Command>
     <ClCompile Include="Viewer\Viewer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="RBody\shapes.h" />
     <ClInclude Include="Viewer\Shader.h" />
     <ClInclude Include="Viewer\glad\glad.h" />
     <ClInclude Include="Viewer\Viewer.h" />
